chore(deps): drop undici/cookie-parser and require Node 18+
Remove undici and cookie-parser from dependencies and rely on Node 18+ global fetch instead; add engines.node >=18 and update fetch util to throw when fetch is unavailable.

--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bcryptjs": "^3.0.3",
-    "cookie-parser": "^1.4.7",
     "env-paths": "^3.0.0",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
-    "multer": "^2.0.2",
-    "undici": "^7.18.2"
+    "multer": "^2.0.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
