chore(gui): remove web GUI, GUI user tools, routes, and deps
Remove the web GUI and all associated source code, auth store, Express routes, and static assets. Delete GUI-related npm scripts and clear GUI dependencies; replace gui-user.js with a message that the GUI is removed. Rationale: simplify codebase, drop unnecessary web dependencies, and direct users to the CLI or daemon.

--- a/package.json
+++ b/package.json
@@ -5,24 +5,15 @@
   "main": "index.js",
   "scripts": {
     "cli": "node src/index.js",
-    "gui": "node src/gui/server.js",
     "daemon": "node src/daemon.js",
     "config": "node src/config.js",
-    "gui-user": "node src/gui-user.js",
     "install-deps": "node scripts/install-deps.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "UNLICENSED",
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "env-paths": "^3.0.0",
-    "express": "^5.2.1",
-    "express-rate-limit": "^8.2.1",
-    "express-session": "^1.18.2",
-    "multer": "^2.0.2"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=18"
   }
