docs: clarify README quick start and install-deps behavior
Rewrite the README to better explain playlist-to-.strm output structure, add a quick start section, and document what `npm run install-deps` does (including CI behavior) while noting missing CLI/config entrypoints to prevent confusion.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "config": "node src/config.js",
     "radarr-csv": "node src/radarr-csv.js",
     "radarr-adopt": "node src/radarr-adopt.js",
-    "install-deps": "node scripts/install-deps.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install-deps": "node src/install-deps.js",
+    "lint:check": "node --check src/*.js",
+    "test": "node --test"
   },
   "keywords": [],
   "author": "",
